--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ img {
 }
 </style>
 </head>
-<body style="background-color:grey">
+<body style="background-color:black">
 <br>
       <a href="https://peercastnews.com/">
          <img alt="Qries" src="WhatsApp Image 2020-08-24 at 7.34.14 PM.jpeg"
