--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ img {
 </head>
 <body style="background-color:black">
 <br>
-      <a href="https://peercastnews.com/">
+      <a href="https://peercastnews.com/amp/">
          <img alt="Qries" src="WhatsApp Image 2020-08-24 at 7.34.14 PM.jpeg"
          width=1500" height="716" style="width:100%" >
       </a>
