--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ img {
 <body style="background-color:black">
 <br>
       <a href="https://peercastnews.com/amp/">
-         <img alt="Qries" src="WhatsApp Image 2020-08-24 at 7.34.14 PM.jpeg"
+         <img alt="News,Peercastnews, Peercast,Sociohubb,Sociohub,Castnews,Castingnews,Newsjobs,Verifiednews,Newswebsite,News website,Website template,News website template" src="WhatsApp Image 2020-08-24 at 7.34.14 PM.jpeg"
          width=1500" height="716" style="width:100%" >
       </a>
                                                  
